<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/plant_detail_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/plant_detail_margin">

        <ImageView
            android:id="@+id/plant_detail_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_image_height"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/all_picture_placeholder" />

        <TextView
            android:id="@+id/plant_detail_name_ch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/plant_detail_margin"
            android:layout_marginTop="@dimen/plant_detail_margin"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plant_detail_image"
            tools:text="九芎" />

        <TextView
            android:id="@+id/plant_detail_name_en"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/plant_detail_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/plant_detail_name_ch"
            app:layout_constraintTop_toBottomOf="@+id/plant_detail_name_ch"
            tools:text="Subcostate Crape Myrtle" />

        <TextView
            android:id="@+id/plant_detail_also_known_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/plant_detail_margin"
            android:text="@string/plant_detail_also_known_title"
            app:layout_constraintStart_toStartOf="@+id/plant_detail_name_ch"
            app:layout_constraintTop_toBottomOf="@+id/plant_detail_name_en" />

        <TextView
            android:id="@+id/plant_detail_also_known"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/plant_detail_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/plant_detail_name_ch"
            app:layout_constraintTop_toBottomOf="@+id/plant_detail_also_known_title"
            tools:text="苞飯花、拘那花、小果紫薇、南紫薇、猴不爬、怕癢樹、南紫薇、九荊、馬鈴花、蚊仔花" />

        <TextView
            android:id="@+id/plant_detail_brief_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/plant_detail_margin"
            android:text="@string/plant_detail_brief_title"
            app:layout_constraintStart_toStartOf="@+id/plant_detail_name_ch"
            app:layout_constraintTop_toBottomOf="@+id/plant_detail_also_known" />

        <TextView
            android:id="@+id/plant_detail_brief"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/plant_detail_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/plant_detail_name_ch"
            app:layout_constraintTop_toBottomOf="@+id/plant_detail_brief_title"
            tools:text="分布於中低海拔森林及長江以南的地區，為台灣的原生樹種。主要生長在潮濕的崩塌地，有吸水保持土壤之特性，所以是良好的水土保持樹種。" />

        <TextView
            android:id="@+id/plant_detail_feature_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/plant_detail_margin"
            android:text="@string/plant_detail_feature_title"
            app:layout_constraintStart_toStartOf="@+id/plant_detail_name_ch"
            app:layout_constraintTop_toBottomOf="@+id/plant_detail_brief" />

        <TextView
            android:id="@+id/plant_detail_feaeture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/plant_detail_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/plant_detail_name_ch"
            app:layout_constraintTop_toBottomOf="@+id/plant_detail_feature_title"
            tools:text="紅褐色的樹皮剝落後呈灰白色，樹幹光滑堅硬。葉有極短的柄，長橢圓形或卵形，全綠，葉片兩端尖，秋冬轉紅。夏季6～8月開花，花冠白色，花數甚多而密生於枝端，花為圓錐花序頂生，花瓣有長柄，邊緣皺曲像衣裙的花邊花絲長短不一。果實為蒴果，橢圓形約6-8公厘，種子有翅。" />

        <TextView
            android:id="@+id/plant_detail_function_application_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/plant_detail_margin"
            android:text="@string/plant_detail_funtion_application_title"
            app:layout_constraintStart_toStartOf="@+id/plant_detail_name_ch"
            app:layout_constraintTop_toBottomOf="@+id/plant_detail_feaeture" />

        <TextView
            android:id="@+id/plant_detail_function_application"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/plant_detail_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/plant_detail_name_ch"
            app:layout_constraintTop_toBottomOf="@+id/plant_detail_function_application_title"
            tools:text="1. 優良薪炭材：木質堅硬耐燒，是臺灣優良的薪炭材之一。\n2. 水土保持植栽：可栽植於河岸及邊坡供水土保持。\n3. 農具用材：木質堅硬，乾燥後不太會反翹，是做農具的用材。\n4. 食用性：花、根入藥，味淡微苦，敗毒散瘀，花蕾味苦有清香，可生食。葉子是長尾水青蛾幼蟲的食草。" />

        <TextView
            android:id="@+id/plant_detail_last_update_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/plant_detail_margin"
            android:text="@string/plant_detail_last_update_title"
            app:layout_constraintStart_toStartOf="@+id/plant_detail_name_ch"
            app:layout_constraintTop_toBottomOf="@+id/plant_detail_function_application" />

        <TextView
            android:id="@+id/plant_detail_last_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/plant_detail_last_update_title"
            app:layout_constraintTop_toTopOf="@+id/plant_detail_last_update_title"
            tools:text="2017/9/4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>